# green-hack-api

./: .gitignore  README.md  bees.db  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.vscode.yml
alembic/: env.py
alembic/versions/: 568e87d792a5_some_description.py  a85743b06c8d_initial3.py
db/: bees.db
scripts/: makemigrations.sh  prestart.sh  run.sh
src/: crud.py  database.py  main.py  models.py  schemas.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: beehive.py  beestand.py  breeding.py  disease.py  movement.py  user.py
src/core/: config.py
src/crud/: __init__.py  base.py  crud_beehive.py  crud_beestand.py  crud_breeding.py  crud_disease.py  crud_movement.py  crud_user.py
src/db/: base.py  init_db.py
src/models/: beehive.py  beestand.py  breeding.py  disease.py  movement.py  user.py
src/schemas/: __init__.py  beehive.py  beestand.py  breeding.py  disease.py  movement.py  user.py
src/templates/: index.html
